# game-engine-core

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: peer-review.md  update-readme.md
.devcontainer/: Dockerfile  devcontainer.env.example  devcontainer.json
doc/guidelines/: implementation-plan-guide.md
doc/plan/00000000-initial-design/: peer-review.md
doc/plan/00000001-add-ml-package/: implementation-plan.md  peer-review.md  (+1 more)
examples/tictactoe/: main.py  tictactoe_evaluator.py  tictactoe_heuristic_evaluator.py  tictactoe_ply.py  tictactoe_position.py  tictactoe_ui.py
examples/tictactoe_learning/: main.py  selfplay.py  tictactoe_mlp.py  tictactoe_nn_evaluator.py  tournament.py  train.py
game_engine_core/engines/: mcts_engine.py  random_engine.py
game_engine_core/evaluators/: null_evaluator.py
game_engine_core/game/: standard_game.py
game_engine_core/models/: game_result.py  position_evaluation.py
game_engine_core/players/: ai_player.py  human_player.py
game_engine_core/protocols/: game_engine.py  game_logging.py  game_ply.py  game_position.py  game_ui.py  player.py  position_evaluator.py
game_engine_core/tournament/: cross_table.py  game_record.py  reporting.py  standings.py  tournament.py  tournament_result.py
game_engine_learning/: checkpoints.py  neural_network_evaluator.py  self_play_collector.py  training_loop.py  training_sample.py
tests/: test_smoke.py
tests/core/: nim_fixture.py  test_mcts_engine.py  test_nim_fixture.py  test_random_engine.py  test_standard_game.py  test_tournament.py  test_tournament_reporting.py  test_tournament_results.py
tests/learning/: nim_nn.py  test_checkpoints.py  test_neural_network_evaluator.py  test_self_play_collector.py  test_training_loop.py
(+35 files in other folders)
